update manifest & readme

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
 	"name": "STAC Search",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"description": "STAC Search plugin.",
+	"author": "Darren Wiens",
+	"authorUrl": "https://github.com/darrenwiens",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
